Updating plugin code to be Java 5 and Eclipse 3.3 compliant